Package_Tools/include-C/box2d/fertig/box2d.h

/// Simulate a world for one time step. This performs collision detection, integration, and constraint solution.
/// @param worldId The world to simulate
/// @param timeStep The amount of time to simulate, this should be a fixed number. Usually 1/60.
/// @param subStepCount The number of sub-steps, increasing the sub-step count can increase accuracy. Usually 4.
extern void b2World_Step( b2WorldId worldId, float timeStep, int subStepCount );
/// Set the world transform of a body. This acts as a teleport and is fairly expensive.
/// @note Generally you should create a body with then intended transform.
/// @see b2BodyDef::position and b2BodyDef::rotation
extern void b2Body_SetTransform( b2BodyId bodyId, b2Vec2 position, b2Rot rotation );
/// Get a local point on a body given a world point
extern b2Vec2 b2Body_GetLocalPoint( b2BodyId bodyId, b2Vec2 worldPoint );
/// Get a world point on a body given a local point
extern b2Vec2 b2Body_GetWorldPoint( b2BodyId bodyId, b2Vec2 localPoint );
/// Get a local vector on a body given a world vector
extern b2Vec2 b2Body_GetLocalVector( b2BodyId bodyId, b2Vec2 worldVector );
/// Get a world vector on a body given a local vector
extern b2Vec2 b2Body_GetWorldVector( b2BodyId bodyId, b2Vec2 localVector );
/// Get the linear velocity of a body's center of mass. Usually in meters per second.
extern b2Vec2 b2Body_GetLinearVelocity( b2BodyId bodyId );
/// Get the angular velocity of a body in radians per second
extern float b2Body_GetAngularVelocity( b2BodyId bodyId );
/// Set the linear velocity of a body. Usually in meters per second.
extern void b2Body_SetLinearVelocity( b2BodyId bodyId, b2Vec2 linearVelocity );
/// Set the angular velocity of a body in radians per second
extern void b2Body_SetAngularVelocity( b2BodyId bodyId, float angularVelocity );
/// Set the velocity to reach the given transform after a given time step.
/// The result will be close but maybe not exact. This is meant for kinematic bodies.
/// The target is not applied if the velocity would be below the sleep threshold and
/// the body is currently asleep.
/// @param bodyId The body id
/// @param target The target transform for the body
/// @param timeStep The time step of the next call to b2World_Step
/// @param wake Option to wake the body or not
extern void b2Body_SetTargetTransform( b2BodyId bodyId, b2Transform target, float timeStep, bool wake );
/// Get the linear velocity of a local point attached to a body. Usually in meters per second.
extern b2Vec2 b2Body_GetLocalPointVelocity( b2BodyId bodyId, b2Vec2 localPoint );
/// Get the linear velocity of a world point attached to a body. Usually in meters per second.
extern b2Vec2 b2Body_GetWorldPointVelocity( b2BodyId bodyId, b2Vec2 worldPoint );
/// Apply a force at a world point. If the force is not applied at the center of mass,
/// it will generate a torque and affect the angular velocity. This optionally wakes up the body.
/// The force is ignored if the body is not awake.
/// @param bodyId The body id
/// @param force The world force vector, usually in newtons (N)
/// @param point The world position of the point of application
/// @param wake Option to wake up the body
extern void b2Body_ApplyForce( b2BodyId bodyId, b2Vec2 force, b2Vec2 point, bool wake );
/// Apply a force to the center of mass. This optionally wakes up the body.
/// The force is ignored if the body is not awake.
/// @param bodyId The body id
/// @param force the world force vector, usually in newtons (N).
/// @param wake also wake up the body
extern void b2Body_ApplyForceToCenter( b2BodyId bodyId, b2Vec2 force, bool wake );
/// Apply a torque. This affects the angular velocity without affecting the linear velocity.
/// This optionally wakes the body. The torque is ignored if the body is not awake.
/// @param bodyId The body id
/// @param torque about the z-axis (out of the screen), usually in N*m.
/// @param wake also wake up the body
extern void b2Body_ApplyTorque( b2BodyId bodyId, float torque, bool wake );
/// Clear the force and torque on this body. Forces and torques are automatically cleared after each world
/// step. So this only needs to be called if the application wants to remove the effect of previous
/// calls to apply forces and torques before the world step is called.
/// @param bodyId The body id
extern void b2Body_ClearForces( b2BodyId bodyId );
/// Apply an impulse at a point. This immediately modifies the velocity.
/// It also modifies the angular velocity if the point of application
/// is not at the center of mass. This optionally wakes the body.
/// The impulse is ignored if the body is not awake.
/// @param bodyId The body id
/// @param impulse the world impulse vector, usually in N*s or kg*m/s.
/// @param point the world position of the point of application.
/// @param wake also wake up the body
/// @warning This should be used for one-shot impulses. If you need a steady force,
/// use a force instead, which will work better with the sub-stepping solver.
extern void b2Body_ApplyLinearImpulse( b2BodyId bodyId, b2Vec2 impulse, b2Vec2 point, bool wake );
/// Apply an impulse to the center of mass. This immediately modifies the velocity.
/// The impulse is ignored if the body is not awake. This optionally wakes the body.
/// @param bodyId The body id
/// @param impulse the world impulse vector, usually in N*s or kg*m/s.
/// @param wake also wake up the body
/// @warning This should be used for one-shot impulses. If you need a steady force,
/// use a force instead, which will work better with the sub-stepping solver.
extern void b2Body_ApplyLinearImpulseToCenter( b2BodyId bodyId, b2Vec2 impulse, bool wake );
/// Apply an angular impulse. The impulse is ignored if the body is not awake.
/// This optionally wakes the body.
/// @param bodyId The body id
/// @param impulse the angular impulse, usually in units of kg*m*m/s
/// @param wake also wake up the body
/// @warning This should be used for one-shot impulses. If you need a steady torque,
/// use a torque instead, which will work better with the sub-stepping solver.
extern void b2Body_ApplyAngularImpulse( b2BodyId bodyId, float impulse, bool wake );
/// Get the mass of the body, usually in kilograms
extern float b2Body_GetMass( b2BodyId bodyId );
/// Get the rotational inertia of the body, usually in kg*m^2
extern float b2Body_GetRotationalInertia( b2BodyId bodyId );
/// Get the center of mass position of the body in local space
extern b2Vec2 b2Body_GetLocalCenterOfMass( b2BodyId bodyId );
/// Get the center of mass position of the body in world space
extern b2Vec2 b2Body_GetWorldCenterOfMass( b2BodyId bodyId );
/// Override the body's mass properties. Normally this is computed automatically using the
/// shape geometry and density. This information is lost if a shape is added or removed or if the
/// body type changes.
extern void b2Body_SetMassData( b2BodyId bodyId, b2MassData massData );
/// Get the mass data for a body
extern b2MassData b2Body_GetMassData( b2BodyId bodyId );
/// This updates the mass properties to the sum of the mass properties of the shapes.
/// This normally does not need to be called unless you called SetMassData to override
/// the mass and you later want to reset the mass.
/// You may also use this when automatic mass computation has been disabled.
/// You should call this regardless of body type.
/// Note that sensor shapes may have mass.
extern void b2Body_ApplyMassFromShapes( b2BodyId bodyId );
/// Adjust the linear damping. Normally this is set in b2BodyDef before creation.
extern void b2Body_SetLinearDamping( b2BodyId bodyId, float linearDamping );
/// Get the current linear damping.
extern float b2Body_GetLinearDamping( b2BodyId bodyId );
/// Adjust the angular damping. Normally this is set in b2BodyDef before creation.
extern void b2Body_SetAngularDamping( b2BodyId bodyId, float angularDamping );
/// Get the current angular damping.
extern float b2Body_GetAngularDamping( b2BodyId bodyId );
/// Adjust the gravity scale. Normally this is set in b2BodyDef before creation.
/// @see b2BodyDef::gravityScale
extern void b2Body_SetGravityScale( b2BodyId bodyId, float gravityScale );
/// Get the current gravity scale
extern float b2Body_GetGravityScale( b2BodyId bodyId );
/// @return true if this body is awake
extern bool b2Body_IsAwake( b2BodyId bodyId );
/// Wake a body from sleep. This wakes the entire island the body is touching.
/// @warning Putting a body to sleep will put the entire island of bodies touching this body to sleep,
/// which can be expensive and possibly unintuitive.
extern void b2Body_SetAwake( b2BodyId bodyId, bool awake );
/// Wake bodies touching this body. Works for static bodies.
extern void b2Body_WakeTouching( b2BodyId bodyId );
/// Enable or disable sleeping for this body. If sleeping is disabled the body will wake.
extern void b2Body_EnableSleep( b2BodyId bodyId, bool enableSleep );
/// Returns true if sleeping is enabled for this body
extern bool b2Body_IsSleepEnabled( b2BodyId bodyId );
/// Set the sleep threshold, usually in meters per second
extern void b2Body_SetSleepThreshold( b2BodyId bodyId, float sleepThreshold );
/// Get the sleep threshold, usually in meters per second.
extern float b2Body_GetSleepThreshold( b2BodyId bodyId );
/// Returns true if this body is enabled
extern bool b2Body_IsEnabled( b2BodyId bodyId );
/// Disable a body by removing it completely from the simulation. This is expensive.
extern void b2Body_Disable( b2BodyId bodyId );
/// Enable a body by adding it to the simulation. This is expensive.
extern void b2Body_Enable( b2BodyId bodyId );
/// Set the motion locks on this body.
extern void b2Body_SetMotionLocks( b2BodyId bodyId, b2MotionLocks locks );
/// Get the motion locks for this body.
extern b2MotionLocks b2Body_GetMotionLocks( b2BodyId bodyId );
/// Set this body to be a bullet. A bullet does continuous collision detection
/// against dynamic bodies (but not other bullets).
extern void b2Body_SetBullet( b2BodyId bodyId, bool flag );
/// Is this body a bullet?
extern bool b2Body_IsBullet( b2BodyId bodyId );
/// Enable/disable contact events on all shapes.
/// @see b2ShapeDef::enableContactEvents
/// @warning changing this at runtime may cause mismatched begin/end touch events
extern void b2Body_EnableContactEvents( b2BodyId bodyId, bool flag );
/// Enable/disable hit events on all shapes
/// @see b2ShapeDef::enableHitEvents
extern void b2Body_EnableHitEvents( b2BodyId bodyId, bool flag );
/// Get the world that owns this body
extern b2WorldId b2Body_GetWorld( b2BodyId bodyId );
/// Get the number of shapes on this body
extern int b2Body_GetShapeCount( b2BodyId bodyId );
/// Get the shape ids for all shapes on this body, up to the provided capacity.
/// @returns the number of shape ids stored in the user array
extern int b2Body_GetShapes( b2BodyId bodyId, b2ShapeId* shapeArray, int capacity );
/// Get the number of joints on this body
extern int b2Body_GetJointCount( b2BodyId bodyId );
/// Get the joint ids for all joints on this body, up to the provided capacity
/// @returns the number of joint ids stored in the user array
extern int b2Body_GetJoints( b2BodyId bodyId, b2JointId* jointArray, int capacity );
/// Get the maximum capacity required for retrieving all the touching contacts on a body
extern int b2Body_GetContactCapacity( b2BodyId bodyId );