Package_Tools/include-C/box2d/fertig/box2d.pp

procedure b2Body_SetTransform(bodyId:Tb2BodyId; position:Tb2Vec2; rotation:Tb2Rot);cdecl;external;
{/ Get a local point on a body given a world point }
function b2Body_GetLocalPoint(bodyId:Tb2BodyId; worldPoint:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Get a world point on a body given a local point }
function b2Body_GetWorldPoint(bodyId:Tb2BodyId; localPoint:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Get a local vector on a body given a world vector }
function b2Body_GetLocalVector(bodyId:Tb2BodyId; worldVector:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Get a world vector on a body given a local vector }
function b2Body_GetWorldVector(bodyId:Tb2BodyId; localVector:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Get the linear velocity of a body's center of mass. Usually in meters per second. }
function b2Body_GetLinearVelocity(bodyId:Tb2BodyId):Tb2Vec2;cdecl;external;
{/ Get the angular velocity of a body in radians per second }
function b2Body_GetAngularVelocity(bodyId:Tb2BodyId):single;cdecl;external;
{/ Set the linear velocity of a body. Usually in meters per second. }
procedure b2Body_SetLinearVelocity(bodyId:Tb2BodyId; linearVelocity:Tb2Vec2);cdecl;external;
{/ Set the angular velocity of a body in radians per second }
procedure b2Body_SetAngularVelocity(bodyId:Tb2BodyId; angularVelocity:single);cdecl;external;
{/ Set the velocity to reach the given transform after a given time step. }
{/ The result will be close but maybe not exact. This is meant for kinematic bodies. }
{/ The target is not applied if the velocity would be below the sleep threshold and }
{/ the body is currently asleep. }
{/ @param bodyId The body id }
{/ @param target The target transform for the body }
{/ @param timeStep The time step of the next call to b2World_Step }
{/ @param wake Option to wake the body or not }
procedure b2Body_SetTargetTransform(bodyId:Tb2BodyId; target:Tb2Transform; timeStep:single; wake:Tbool);cdecl;external;
{/ Get the linear velocity of a local point attached to a body. Usually in meters per second. }
function b2Body_GetLocalPointVelocity(bodyId:Tb2BodyId; localPoint:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Get the linear velocity of a world point attached to a body. Usually in meters per second. }
function b2Body_GetWorldPointVelocity(bodyId:Tb2BodyId; worldPoint:Tb2Vec2):Tb2Vec2;cdecl;external;
{/ Apply a force at a world point. If the force is not applied at the center of mass, }
{/ it will generate a torque and affect the angular velocity. This optionally wakes up the body. }
{/ The force is ignored if the body is not awake. }
{/ @param bodyId The body id }
{/ @param force The world force vector, usually in newtons (N) }
{/ @param point The world position of the point of application }
{/ @param wake Option to wake up the body }
procedure b2Body_ApplyForce(bodyId:Tb2BodyId; force:Tb2Vec2; point:Tb2Vec2; wake:Tbool);cdecl;external;
{/ Apply a force to the center of mass. This optionally wakes up the body. }
{/ The force is ignored if the body is not awake. }
{/ @param bodyId The body id }
{/ @param force the world force vector, usually in newtons (N). }
{/ @param wake also wake up the body }
procedure b2Body_ApplyForceToCenter(bodyId:Tb2BodyId; force:Tb2Vec2; wake:Tbool);cdecl;external;
{/ Apply a torque. This affects the angular velocity without affecting the linear velocity. }
{/ This optionally wakes the body. The torque is ignored if the body is not awake. }
{/ @param bodyId The body id }
{/ @param torque about the z-axis (out of the screen), usually in N*m. }
{/ @param wake also wake up the body }
procedure b2Body_ApplyTorque(bodyId:Tb2BodyId; torque:single; wake:Tbool);cdecl;external;
{/ Clear the force and torque on this body. Forces and torques are automatically cleared after each world }
{/ step. So this only needs to be called if the application wants to remove the effect of previous }
{/ calls to apply forces and torques before the world step is called. }
{/ @param bodyId The body id }
procedure b2Body_ClearForces(bodyId:Tb2BodyId);cdecl;external;
{/ Apply an impulse at a point. This immediately modifies the velocity. }
{/ It also modifies the angular velocity if the point of application }
{/ is not at the center of mass. This optionally wakes the body. }
{/ The impulse is ignored if the body is not awake. }
{/ @param bodyId The body id }
{/ @param impulse the world impulse vector, usually in N*s or kg*m/s. }
{/ @param point the world position of the point of application. }
{/ @param wake also wake up the body }
{/ @warning This should be used for one-shot impulses. If you need a steady force, }
{/ use a force instead, which will work better with the sub-stepping solver. }
procedure b2Body_ApplyLinearImpulse(bodyId:Tb2BodyId; impulse:Tb2Vec2; point:Tb2Vec2; wake:Tbool);cdecl;external;
{/ Apply an impulse to the center of mass. This immediately modifies the velocity. }
{/ The impulse is ignored if the body is not awake. This optionally wakes the body. }
{/ @param bodyId The body id }
{/ @param impulse the world impulse vector, usually in N*s or kg*m/s. }
{/ @param wake also wake up the body }
{/ @warning This should be used for one-shot impulses. If you need a steady force, }
{/ use a force instead, which will work better with the sub-stepping solver. }
procedure b2Body_ApplyLinearImpulseToCenter(bodyId:Tb2BodyId; impulse:Tb2Vec2; wake:Tbool);cdecl;external;
{/ Apply an angular impulse. The impulse is ignored if the body is not awake. }
{/ This optionally wakes the body. }
{/ @param bodyId The body id }
{/ @param impulse the angular impulse, usually in units of kg*m*m/s }
{/ @param wake also wake up the body }
{/ @warning This should be used for one-shot impulses. If you need a steady torque, }
{/ use a torque instead, which will work better with the sub-stepping solver. }
procedure b2Body_ApplyAngularImpulse(bodyId:Tb2BodyId; impulse:single; wake:Tbool);cdecl;external;
{/ Get the mass of the body, usually in kilograms }
function b2Body_GetMass(bodyId:Tb2BodyId):single;cdecl;external;
{/ Get the rotational inertia of the body, usually in kg*m^2 }
function b2Body_GetRotationalInertia(bodyId:Tb2BodyId):single;cdecl;external;
{/ Get the center of mass position of the body in local space }
function b2Body_GetLocalCenterOfMass(bodyId:Tb2BodyId):Tb2Vec2;cdecl;external;
{/ Get the center of mass position of the body in world space }
function b2Body_GetWorldCenterOfMass(bodyId:Tb2BodyId):Tb2Vec2;cdecl;external;
{/ Override the body's mass properties. Normally this is computed automatically using the }
{/ shape geometry and density. This information is lost if a shape is added or removed or if the }
{/ body type changes. }
procedure b2Body_SetMassData(bodyId:Tb2BodyId; massData:Tb2MassData);cdecl;external;
{/ Get the mass data for a body }
function b2Body_GetMassData(bodyId:Tb2BodyId):Tb2MassData;cdecl;external;
{/ This updates the mass properties to the sum of the mass properties of the shapes. }
{/ This normally does not need to be called unless you called SetMassData to override }
{/ the mass and you later want to reset the mass. }
{/ You may also use this when automatic mass computation has been disabled. }
{/ You should call this regardless of body type. }
{/ Note that sensor shapes may have mass. }
procedure b2Body_ApplyMassFromShapes(bodyId:Tb2BodyId);cdecl;external;
{/ Adjust the linear damping. Normally this is set in b2BodyDef before creation. }
procedure b2Body_SetLinearDamping(bodyId:Tb2BodyId; linearDamping:single);cdecl;external;
{/ Get the current linear damping. }
function b2Body_GetLinearDamping(bodyId:Tb2BodyId):single;cdecl;external;
{/ Adjust the angular damping. Normally this is set in b2BodyDef before creation. }
procedure b2Body_SetAngularDamping(bodyId:Tb2BodyId; angularDamping:single);cdecl;external;
{/ Get the current angular damping. }
function b2Body_GetAngularDamping(bodyId:Tb2BodyId):single;cdecl;external;
{/ Adjust the gravity scale. Normally this is set in b2BodyDef before creation. }
{/ @see b2BodyDef::gravityScale }
procedure b2Body_SetGravityScale(bodyId:Tb2BodyId; gravityScale:single);cdecl;external;
{/ Get the current gravity scale }
function b2Body_GetGravityScale(bodyId:Tb2BodyId):single;cdecl;external;
{/ @return true if this body is awake }
function b2Body_IsAwake(bodyId:Tb2BodyId):Tbool;cdecl;external;
{/ Wake a body from sleep. This wakes the entire island the body is touching. }
{/ @warning Putting a body to sleep will put the entire island of bodies touching this body to sleep, }
{/ which can be expensive and possibly unintuitive. }
procedure b2Body_SetAwake(bodyId:Tb2BodyId; awake:Tbool);cdecl;external;
{/ Wake bodies touching this body. Works for static bodies. }
procedure b2Body_WakeTouching(bodyId:Tb2BodyId);cdecl;external;
{/ Enable or disable sleeping for this body. If sleeping is disabled the body will wake. }
procedure b2Body_EnableSleep(bodyId:Tb2BodyId; enableSleep:Tbool);cdecl;external;
{/ Returns true if sleeping is enabled for this body }
function b2Body_IsSleepEnabled(bodyId:Tb2BodyId):Tbool;cdecl;external;
{/ Set the sleep threshold, usually in meters per second }
procedure b2Body_SetSleepThreshold(bodyId:Tb2BodyId; sleepThreshold:single);cdecl;external;
{/ Get the sleep threshold, usually in meters per second. }
function b2Body_GetSleepThreshold(bodyId:Tb2BodyId):single;cdecl;external;
{/ Returns true if this body is enabled }
function b2Body_IsEnabled(bodyId:Tb2BodyId):Tbool;cdecl;external;
{/ Disable a body by removing it completely from the simulation. This is expensive. }
procedure b2Body_Disable(bodyId:Tb2BodyId);cdecl;external;
{/ Enable a body by adding it to the simulation. This is expensive. }
procedure b2Body_Enable(bodyId:Tb2BodyId);cdecl;external;
{/ Set the motion locks on this body. }
procedure b2Body_SetMotionLocks(bodyId:Tb2BodyId; locks:Tb2MotionLocks);cdecl;external;
{/ Get the motion locks for this body. }
function b2Body_GetMotionLocks(bodyId:Tb2BodyId):Tb2MotionLocks;cdecl;external;
{/ Set this body to be a bullet. A bullet does continuous collision detection }
{/ against dynamic bodies (but not other bullets). }
procedure b2Body_SetBullet(bodyId:Tb2BodyId; flag:Tbool);cdecl;external;
{/ Is this body a bullet? }
function b2Body_IsBullet(bodyId:Tb2BodyId):Tbool;cdecl;external;
{/ Enable/disable contact events on all shapes. }
{/ @see b2ShapeDef::enableContactEvents }
{/ @warning changing this at runtime may cause mismatched begin/end touch events }
procedure b2Body_EnableContactEvents(bodyId:Tb2BodyId; flag:Tbool);cdecl;external;
{/ Enable/disable hit events on all shapes }
{/ @see b2ShapeDef::enableHitEvents }
procedure b2Body_EnableHitEvents(bodyId:Tb2BodyId; flag:Tbool);cdecl;external;
{/ Get the world that owns this body }
function b2Body_GetWorld(bodyId:Tb2BodyId):Tb2WorldId;cdecl;external;
{/ Get the number of shapes on this body }
function b2Body_GetShapeCount(bodyId:Tb2BodyId):longint;cdecl;external;
{/ Get the shape ids for all shapes on this body, up to the provided capacity. }
{/ @returns the number of shape ids stored in the user array }
function b2Body_GetShapes(bodyId:Tb2BodyId; shapeArray:Pb2ShapeId; capacity:longint):longint;cdecl;external;
{/ Get the number of joints on this body }
function b2Body_GetJointCount(bodyId:Tb2BodyId):longint;cdecl;external;
{/ Get the joint ids for all joints on this body, up to the provided capacity }
{/ @returns the number of joint ids stored in the user array }
function b2Body_GetJoints(bodyId:Tb2BodyId; jointArray:Pb2JointId; capacity:longint):longint;cdecl;external;
{/ Get the maximum capacity required for retrieving all the touching contacts on a body }
function b2Body_GetContactCapacity(bodyId:Tb2BodyId):longint;cdecl;external;
{/ Get the touching contact data for a body. }
{/ @note Box2D uses speculative collision so some contact points may be separated. }
{/ @returns the number of elements filled in the provided array }
{/ @warning do not ignore the return value, it specifies the valid number of elements }
